Added cd aliases and gow utils

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-## Those files should be taken from their repositary
+## Those files should be taken from their repository
 
 vendor/*/*
 !vendor/*
